@@ -152,7 +152,7 @@ $x$\%$y${\rm,} divrem$(x,y)$}
 \li{as \kbd{Pol}, etc., starting with constant term}
    {Polrev{\rm, }Vecrev{\rm, }Colrev}
 \li{make $x$ a power series of $v$}{Ser$(x,\{v\})$}
-\li{string from bytes / from format+args}{Strchr{\rm, }Strprintf}
+\li{string from bytes / from format+args}{strchr{\rm, }Strprintf}
 \li{TeX string}{Strtex$(x)$}
 \li{convert $x$ to simplest possible type}{simplify$(x)$}
 \li{object $x$ with real precision $n$}{precision$(x,n)$}
