@@ -13,5 +13,5 @@ Doc:
  This acts as \kbd{Vec}$(x,n)$, but only on a limited set of objects:
  the result must be representable as a vector of small integers.
  If $x$ is a character string, a vector of individual characters in ASCII
- encoding is returned (\tet{Strchr} yields back the character string).
+ encoding is returned (\tet{strchr} yields back the character string).
 Variant: \fun{GEN}{gtovecsmall}{GEN x} is also available.
