@@ -12,6 +12,7 @@ with the package; see the file 'COPYING'. If not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA. */
 
 /* For compatibility with older PARI versions */
+#define Strchr pari_strchr
 #define LOG2 M_LN2
 #define truecoeff truecoef
 #define polcoeff0 polcoef
