@@ -26,9 +26,9 @@ Vecsmall([104, 101, 108, 108, 111, 32, 119, 111, 114, 108, 100, 33])
 ["", "a", "b", "", ""]
 ["a", "b", "", "", "", "cc"]
 "a/b/cc"
-  ***   at top-level: Strchr(-1)
+  ***   at top-level: strchr(-1)
   ***                 ^----------
-  *** Strchr: out of range in integer -> character conversion (-1).
+  *** strchr: out of range in integer -> character conversion (-1).
   ***   at top-level: strsplit(1,1)
   ***                 ^-------------
   *** strsplit: incorrect type in strsplit (t_INT).
